<resources>
    <string name="app_name">ULinking</string>
    <string name="home">首页</string>
    <string name="product">产品</string>
    <string name="scheme">方案</string>
    <string name="demo">演示</string>
    <string name="me">我的</string>
    <string name="company">公司简介</string>
    <string name="news">最新动态</string>
    <string name="details">查看详情</string>
    <string name="more">更多</string>
    <string name="Promotion">促销活动</string>
    <string name="account">请输入用户名</string>
    <string name="passwordagain">请再次输入密码</string>
    <string name="forget">忘记密码？</string>
    <string name="skip">跳过</string>
    <string name="toregister">没有帐号？立刻注册</string>
    <string name="AccountorPasswordisEmpty">帐号或者密码不能为空</string>
    <string name="email">请输入邮箱</string>
    <string name="captcha">请输入验证码</string>
    <string name="get">获取</string>
    <string name="emailisEmpty">邮箱不能为空</string>
    <string name="CaptchaisEmpty">验证码不能为空</string>
    <string name="iserror">出错了，请稍后再试</string>
    <string name="emailisnotregx">邮箱格式不正确</string>
    <string name="phoneisnotregx">手机号格式不正确</string>
    <string name="passwordisinconformity">两次密码不一致</string>
    <string name="Company_Details">公司简介</string>
    <string name="regiser">注册</string>
    <string name="phone">请输入手机号</string>
    <string name="ishaveaccount">已有帐号？立即登录>></string>
    <string name="goodregister">注册成功</string>
    <string name="loading">加载中...</string>
    <string name="readloading">释放开始加载</string>
    <string name="uploading">上拉加载更多</string>
    <string name="loadingisok">加载完成</string>
    <string name="releaseTime">发布时间：</string>
    <string name="recentnews">最新动态</string>
    <string name="News_Details">最新动态</string>
    <string name="Peomotion_Details">促销活动</string>
    <string name="requstPerminssions">应用需要此权限保证功能完善</string>
    <string name="changepassword">修改密码</string>
    <string name="myconsult">我的咨询</string>
    <string name="mycollect">我的收藏</string>
    <string name="language">多语言</string>
    <string name="exit">退出</string>
    <string name="update_version">检查更新</string>
    <string name="auto">跟随系统</string>
    <string name="cn">简体中文</string>
    <string name="en">English</string>
    <string name="oldpassword">原密码</string>
    <string name="newpassword">新密码</string>
    <string name="newpasswordagain">确认新密码</string>
    <string name="name">请输入姓名</string>
    <string name="filter">筛选</string>
    <string name="producttype">产品类型</string>
    <string name="brand">品牌</string>
    <string name="price">价格区间</string>
    <string name="lowprice">最低价</string>
    <string name="highprice">最高价</string>
    <string name="resulotion">分辨率</string>
    <string name="reset">重置</string>
    <string name="productdetails">产品详情</string>
    <string name="OldPassWordIsError">原密码不正确</string>
    <string name="oldissamenew">新密码与原密码相同</string>
    <string name="Networkexception">网络异常，请稍后再试</string>
    <string name="passwordchangeok">密码修改成功，请重新登录</string>
    <string name="Abnormalserver">服务器异常，请稍后再试</string>
    <string name="Notconnect">网络异常，未连接网络</string>
    <string name="hasError">出错啦</string>
    <string name="submitsuccessfully">提交成功</string>
    <string name="NOTMORE">没有更多了</string>
    <string name="PASSWORDFORGET">密码找回成功</string>
    <string name="sendsuccessfully">发送成功</string>
    <string name="mailboxnotregistered">该邮箱还没有注册</string>
    <string name="loginsuccessfully">登录成功</string>
    <string name="akick">您已被封号</string>
    <string name="usernameorpassworderror">帐号或密码有误</string>
    <string name="Usernamedoesnotexist">用户名不存在</string>
    <string name="Thepermissionapplicationisrejected">权限申请被拒绝</string>
    <string name="Clicktheexitprogramagain">再按一次退出程序</string>
    <string name="cancelcollection">取消收藏</string>
    <string name="discount">折</string>
    <string name="openfile">打开文件</string>
    <string name="downloading">正在下载</string>
    <string name="message">提示</string>
    <string name="Youarenotcurrentlyloggedin">点击登录</string>
    <string name="loginnow">立刻登录</string>
    <string name="Collectionofsuccess">收藏成功</string>
    <string name="passwordistolow">密码长度过短，最少六位密码</string>
    <string name="Theusernamealreadyexists">用户名已存在</string>
    <string name="Themailboxhasbeenregistered">该邮箱已注册</string>
    <string name="Thephonenumberhasbeenregistered">该手机号已注册</string>
    <string name="Importantupdate">重要更新</string>
    <string name="welcomeback">欢迎回来</string>
    <string name="Thefilehasbeendownloaded">文件已经下载到:</string>
    <string name="Downloadaddresserror">下载地址错误</string>
    <string name="downloadcompletes">下载完成</string>
    <string name="Latertosayagain">稍后再说</string>
    <string name="Updateimmediately">马上更新</string>
    <string name="Pleaseenteryourconsultingtitle">请输入您的咨询标题</string>
    <string name="Pleaseenteryourconsultingdetails">请输入您的咨询详情</string>
    <string name="Myadvice">我的咨询</string>
    <string name="Commit">提交</string>
    <string name="updateviesion">版本升级</string>
    <string name="checkall">全选</string>
    <string name="now">现</string>
    <string name="model">型号：</string>
    <string name="consult">咨询</string>
    <string name="TOEFL">资料下载</string>
    <string name="Jarrow">明星产品</string>
    <string name="Isthelatestversion">已是最新版本</string>
    <string name="deleteall">确认删除全部吗？</string>
    <string name="Pricerangeerror">价格区间错误</string>
    <string name="Thereisnorelevantcontent">暂无相关内容</string>
    <string name="Thecaptchahasfailed">验证码错误</string>
    <string name="Enterthesearch">请输入搜索内容</string>
    <string name="Areyouexit">确定退出吗？</string>
    <string name="Lookprice">查看价格</string>
    <string name="daihao">请输入公司代号</string>
    <string name="go">进入</string>
    <string name="guanjianci">请输入关键词</string>
    <string name="zhantingdaohangrukou">展厅导航入口</string>
    <string name="News">新闻</string>
    <string name="changeCompany">切换商家</string>
    <string name="shareTo">分享到</string>
    <string name="wechat">微信</string>
    <string name="wechatfriend">朋友圈</string>
    <string name="exhibition">展位号、公司名称、产品</string>
    <string name="industry">行业</string>
    <string name="Businessmen">商家推荐</string>
    <string name="score">评分</string>
    <string name="Codename">代号</string>
    <string name="Businessmensearch">商家搜索</string>
    <string name="searchcode">请输入关键词</string>
    <string name="exhibitionhall">展厅首页</string>
    <string name="exhibitionDetails">展位详情</string>
    <string name="my_merchants_collect">商家收藏</string>
    <string name="The_product_collection">产品收藏</string>
    <string name="merchantsscore">商家评分</string>
    <string name="share">ULinking</string>
    <string name="Enter_Keywords">请输入关键词</string>
    <string name="Please_enter_a_company_code">请输入公司代号</string>
    <string name="Merchant_does_not_exist">商户不存在</string>
    <string name="Collection_or_cancel_this_failure">收藏或取消失败</string>
    <string name="Merchants_have_to_collect">商户已收藏</string>
    <string name="The_member_information_does_not_exist">会员信息不存在</string>
    <string name="Merchants_information_does_not_exist">商户信息不存在</string>
    <string name="Enter_the_merchants_homepage">进入商家首页</string>
    <string name="High_praise">好评</string>
    <string name="medium">中评</string>
    <string name="negative_comment">差评</string>
    <string name="The_company_code">公司代号</string>
    <string name="The_company_fen">分</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="password">请输入密码</string>
    <string name="search">搜索</string>
    <string name="Businessisnotonline">商家未上线</string>
    <string name="appdownload">来自U-linking：</string>

</resources>
