<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/loginbg">


    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@mipmap/logo_denglu" />


    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="@dimen/x264"
        android:layout_height="@dimen/y33"
        android:layout_below="@id/img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/x40"
        android:background="@drawable/rounded_edittext"
        android:paddingLeft="@dimen/x20">

        <ImageView
            android:id="@+id/img_yonghu"
            android:layout_width="@dimen/x21"
            android:layout_height="@dimen/y20"
            android:layout_centerVertical="true"
            android:background="@mipmap/d_yonghu" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y33"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x16"
            android:layout_toRightOf="@id/img_yonghu"
            android:background="@null"
            android:hint="@string/account"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#50f0f0f0" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_width="@dimen/x264"
        android:layout_height="@dimen/y33"
        android:layout_below="@id/rl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/x21"
        android:background="@drawable/rounded_edittext"
        android:paddingLeft="@dimen/x20">

        <ImageView
            android:id="@+id/img_mima"
            android:layout_width="@dimen/x21"
            android:layout_height="@dimen/y20"
            android:layout_centerVertical="true"
            android:background="@mipmap/d_mima" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y33"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x16"
            android:layout_toRightOf="@id/img_mima"
            android:background="@null"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="18"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#50f0f0f0" />
    </RelativeLayout>


    <TextView
        android:id="@+id/tv_forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/rl2"
        android:layout_marginRight="@dimen/x40"
        android:layout_marginTop="@dimen/x13"
        android:text="@string/forget"
        android:textColor="@android:color/white"
        android:textSize="@dimen/x11"
        android:visibility="gone" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/x170"
        android:layout_height="@dimen/y30"
        android:layout_below="@id/rl2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/x45"
        android:background="@drawable/btn_login"
        android:text="@string/login"
        android:textColor="#fff" />


    <Button
        android:id="@+id/btn_btn_skip"
        android:layout_width="@dimen/x170"
        android:layout_height="@dimen/y30"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/x10"
        android:background="@drawable/btn_skip"
        android:text="@string/skip"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/x20"
        android:text="@string/toregister"
        android:textColor="@android:color/white" />


</RelativeLayout>
