<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewPagerContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/rukoubg"
    tools:context="com.zzcn77.android_app_company.Acitivity.BigImageActivity">

    <RelativeLayout
        android:id="@+id/rl_lin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x10">

        <Button
            android:id="@+id/img_back_login"
            android:layout_width="@dimen/x74"
            android:layout_height="@dimen/y31"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x23"
            android:background="@drawable/rukou_login"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/x15" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/x22"
            android:layout_height="@dimen/x22"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/x23"
            android:background="@mipmap/rukou_shezhi" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/img_rukou_icon"
        android:layout_width="@dimen/x110"
        android:layout_height="@dimen/y23"
        android:layout_below="@id/rl_lin1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/x15"
        android:background="@mipmap/rukou_icon" />

    <RelativeLayout
        android:id="@+id/rl_daihao"
        android:layout_width="@dimen/x192"
        android:layout_height="@dimen/y33"
        android:layout_below="@id/img_rukou_icon"
        android:layout_marginLeft="@dimen/x23"
        android:layout_marginTop="@dimen/y23"
        android:background="@drawable/rounded_edittext"
        android:paddingLeft="@dimen/x20">

        <ImageView
            android:id="@+id/img_yonghu"
            android:layout_width="@dimen/x21"
            android:layout_height="@dimen/y20"
            android:layout_centerVertical="true"
            android:background="@mipmap/rukou_search" />

        <EditText
            android:id="@+id/et_daihao"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y33"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x10"
            android:layout_toRightOf="@id/img_yonghu"
            android:background="@null"
            android:hint="@string/daihao"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#fff"
            android:textSize="@dimen/x15" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_go"
        android:layout_width="@dimen/x74"
        android:layout_height="@dimen/y31"
        android:layout_below="@id/img_rukou_icon"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginTop="@dimen/y23"
        android:layout_toRightOf="@id/rl_daihao"
        android:background="@drawable/rukou_login"
        android:text="@string/go"
        android:textColor="@android:color/white"
        android:textSize="@dimen/x15" />


    <RelativeLayout

        android:id="@+id/rl_guanjianci"
        android:layout_width="@dimen/x192"
        android:layout_height="@dimen/y33"
        android:layout_below="@id/btn_go"
        android:layout_marginLeft="@dimen/x23"
        android:layout_marginTop="@dimen/y23"
        android:background="@drawable/rounded_edittext"
        android:paddingLeft="@dimen/x20">

        <ImageView
            android:id="@id/img_yonghu"
            android:layout_width="@dimen/x21"
            android:layout_height="@dimen/y20"
            android:layout_centerVertical="true"
            android:background="@mipmap/rukou_search" />

        <EditText
            android:id="@+id/et_guanjianci"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y33"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x10"
            android:layout_toRightOf="@id/img_yonghu"
            android:background="@null"
            android:hint="@string/guanjianci"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#fff"
            android:textSize="@dimen/x15" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="@dimen/x74"
        android:layout_height="@dimen/y31"
        android:layout_below="@id/btn_go"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginTop="@dimen/y23"
        android:layout_toRightOf="@id/rl_guanjianci"
        android:background="@drawable/rukou_login"
        android:text="@string/search"
        android:textColor="@android:color/white"
        android:textSize="@dimen/x15" />

    <Button
        android:id="@+id/img_zhantingdaohang_bg"
        android:layout_width="@dimen/x268"
        android:layout_height="@dimen/y60"
        android:layout_below="@id/btn_search"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/x20"
        android:background="@mipmap/zhantingdaohang_bg"
        android:text="@string/zhantingdaohangrukou"
        android:textColor="#0768FC"
        android:textSize="@dimen/x20"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/rl_news"
        android:layout_width="@dimen/x268"
        android:layout_height="@dimen/y29"
        android:layout_below="@id/img_zhantingdaohang_bg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/y20"
        android:background="@drawable/price_edittext">

        <TextView
            android:id="@+id/tv_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x5"
            android:text="@string/News"
            android:textColor="#1A1A1A"
            android:textSize="@dimen/x13"
            android:textStyle="bold" />

        <View
            android:id="@+id/v_line"
            android:layout_width="@dimen/x1"
            android:layout_height="@dimen/y12"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x3"
            android:layout_toRightOf="@id/tv_news"
            android:background="#666"></View>

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="@dimen/x175"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x5"
            android:layout_toRightOf="@id/v_line"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="无线网络摄像头拔网线无线网络摄像头拔网线之后无络之后无络."
            android:textColor="#1A1A1A"
            android:textSize="@dimen/x13" />

        <TextView
            android:id="@+id/tv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_content"
            android:text="@string/more" />

        <ImageView
            android:layout_width="@dimen/x13"
            android:layout_height="@dimen/x13"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x5"
            android:layout_toRightOf="@id/tv_more"
            android:background="@mipmap/i_you" />


    </RelativeLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_news"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginTop="@dimen/y20">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/rukou_item_company_layout"></include>

            <include layout="@layout/rukou_item_company_layout"></include>

            <include layout="@layout/rukou_item_company_layout"></include>


        </LinearLayout>
    </HorizontalScrollView>

</RelativeLayout>
