<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/loginbg">


    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@mipmap/logo_denglu" />

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="@dimen/x264"
        android:layout_height="@dimen/y33"
        android:layout_below="@id/img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/x40"
        android:background="@drawable/rounded_edittext"
        android:paddingLeft="@dimen/x20">

        <ImageView
            android:id="@+id/img_yonghu"
            android:layout_width="@dimen/x21"
            android:layout_height="@dimen/y20"
            android:layout_centerVertical="true"
            android:background="@mipmap/d_yonghu" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y33"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x16"
            android:layout_toRightOf="@id/img_yonghu"
            android:background="@null"
            android:hint="@string/account"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#50f0f0f0" />
    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rl2"
        android:layout_width="@dimen/x264"
        android:layout_height="@dimen/y33"
        android:layout_below="@id/rl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/x11"
        android:background="@drawable/rounded_edittext"
        android:paddingLeft="@dimen/x20">

        <ImageView
            android:id="@+id/img_phone"
            android:layout_width="@dimen/x21"
            android:layout_height="@dimen/y20"
            android:layout_centerVertical="true"
            android:background="@mipmap/z_call" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y33"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x16"
            android:layout_toRightOf="@id/img_phone"
            android:background="@null"
            android:hint="@string/phone"
            android:inputType="phone"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#50f0f0f0" />
    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rl3"
        android:layout_width="@dimen/x264"
        android:layout_height="@dimen/y33"
        android:layout_below="@id/rl2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/x11"
        android:background="@drawable/rounded_edittext"
        android:paddingLeft="@dimen/x20">

        <ImageView
            android:id="@+id/img_emali"
            android:layout_width="@dimen/x21"
            android:layout_height="@dimen/y20"
            android:layout_centerVertical="true"
            android:background="@mipmap/z_mail" />

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y33"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x16"
            android:layout_toRightOf="@id/img_emali"
            android:background="@null"
            android:hint="@string/email"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#50f0f0f0" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl4"
        android:layout_width="@dimen/x264"
        android:layout_height="@dimen/y33"
        android:layout_below="@id/rl3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/x11"
        android:background="@drawable/rounded_edittext"
        android:paddingLeft="@dimen/x20">

        <ImageView
            android:id="@+id/img_mima"
            android:layout_width="@dimen/x21"
            android:layout_height="@dimen/y20"
            android:layout_centerVertical="true"
            android:background="@mipmap/d_mima" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y33"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x16"
            android:layout_toRightOf="@id/img_mima"
            android:background="@null"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxEms="18"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#50f0f0f0" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl5"
        android:layout_width="@dimen/x264"
        android:layout_height="@dimen/y33"
        android:layout_below="@id/rl4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/x11"
        android:background="@drawable/rounded_edittext"
        android:paddingLeft="@dimen/x20">

        <ImageView
            android:id="@+id/img_mima2"
            android:layout_width="@dimen/x21"
            android:layout_height="@dimen/y20"
            android:layout_centerVertical="true"
            android:background="@mipmap/d_mima" />

        <EditText
            android:id="@+id/et_password_again"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y33"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x16"
            android:layout_toRightOf="@id/img_mima2"
            android:background="@null"
            android:hint="@string/passwordagain"
            android:inputType="textPassword"
            android:maxEms="18"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#50f0f0f0" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="@dimen/x170"
        android:layout_height="@dimen/y30"
        android:layout_below="@id/rl5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/x20"
        android:background="@drawable/btn_login"
        android:text="@string/regiser"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/x11"
        android:text="@string/ishaveaccount"
        android:textColor="@android:color/white" />


</RelativeLayout>
